unpackaged/main/default/objects/CampaignMember/fields/Prospect_Account_Stage__c.field-meta.xml
<CustomField>
    <fullName>Prospect_Account_Stage__c</fullName>
    <formula>IF(
ContactId &lt;&gt; &quot;&quot;, TEXT(Contact.Account.Account_Stage__c),
NULL
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Prospect Account Stage</label>
    <type>Text</type>
</CustomField>