unpackaged/main/default/objects/CampaignMember/fields/Referring_URL__c.field-meta.xml
<CustomField>
    <fullName>Referring_URL__c</fullName>
    <label>Referring URL</label>
    <type>Url</type>
</CustomField>