unpackaged/main/default/objects/CampaignMember/fields/UTM_Campaign__c.field-meta.xml
<CustomField>
    <fullName>UTM_Campaign__c</fullName>
    <label>UTM Campaign</label>
    <length>50</length>
    <type>Text</type>
</CustomField>